# github-repo-rag

./: .dockerignore  .env.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  COPYRIGHT  Dockerfile  README.md  mcp_server.py  pyproject.toml
.claude/: settings.local.json
.github/: CODEOWNERS
.github/workflows/: claude-code-review.yml  reindex.yml  sync-codeowners.yml
rag/: auth.py  db.py  github.py  query.py
scripts/: ask.py  ingest.py  register.py  reindex.py  sync.py
